Fix: Ajuste de imagen completo en destaque premium para version mobile (#19217)

--- a/src/websites/elcomercio/scss/components/cards/featured-premium/_featured-premium.scss
+++ b/src/websites/elcomercio/scss/components/cards/featured-premium/_featured-premium.scss
@@ -1,7 +1,7 @@
 .featured-premium {
   padding: 0;
   /*  Destaque Premium 2x1 */
-  &[class*=' col-2'] {
+  &[class*=" col-2"] {
     @media (--only-mobile) {
       height: 374px;
     }
@@ -10,10 +10,12 @@
       position: absolute;
       z-index: 1;
       left: 0;
-      height: 100%;
+      /* height: 100%; */
+      height: calc(100% - 125px);
       display: flex;
       justify-content: flex-end;
-      padding: 20px;
+      /* padding: 20px; */
+      padding: 43px 20px 20px 20px;
       bottom: 0;
       @media (--tablet) {
         width: 60%;
@@ -29,7 +31,7 @@
       }
       picture {
         &:after {
-          content: '';
+          content: "";
           position: absolute;
           pointer-events: none;
           width: 100%;
@@ -48,7 +50,7 @@
       color: $color-white;
       &:after,
       &:before {
-        content: '';
+        content: "";
         display: block;
         width: 30px;
         height: 1px;
@@ -83,7 +85,7 @@
     }
     .featured-premium__image {
       &:before {
-        content: '';
+        content: "";
         position: absolute;
         pointer-events: none;
         width: 100%;
@@ -105,7 +107,7 @@
     }
   }
   /*  Destaque Premium 2x2 */
-  &[class*=' row-2'] {
+  &[class*=" row-2"] {
     &.complete {
       .featured-premium__left {
         height: 100%;
@@ -134,7 +136,7 @@
       }
       picture {
         &:after {
-          content: '';
+          content: "";
           position: absolute;
           pointer-events: none;
           width: 100%;
@@ -175,7 +177,7 @@
       color: $color-gray-300;
       &:before,
       &:after {
-        content: '';
+        content: "";
         display: block;
         width: 30px;
         height: 1px;
@@ -222,7 +224,7 @@
       height: 100%;
       picture {
         &:after {
-          content: '';
+          content: "";
           position: absolute;
           pointer-events: none;
           width: 100%;
